--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CS:GO 饰品大逃杀 | 5人死斗</title>
+    <title>哈基肉的饰品大逃杀</title>
     <script src="data.js"></script>
     <style>
         /* --- 核心样式 --- */
@@ -362,3 +362,4 @@
     </script>
 </body>
 </html>
+
