--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="cta-container">
         <a href="https://casego.cn/home?Code=HSR91" target="_blank" class="cta-btn">
             🎟️ 立即前往 Casego 参与
-            <span>点击跳转购票 · 认准哈基肉小店</span>
+            <span>点击跳转到平台 · 认准哈基肉小店</span>
         </a>
     </div>
 
@@ -464,3 +464,4 @@
     </script>
 </body>
 </html>
+
